[package]
name = "blocker"
version = "0.1.0"
authors = ["Arne Beer <contact@arne.beer>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
log = "0.4"
simplelog = "0.8"
structopt = "0.3"
lazy_static = "1.4"

subprocess = "0.2"

csv = "1"
serde = "1"
serde_derive  = "1"
